# Dungeon_Dice_Roller

./: CMakeLists.txt
Include/: diceapplication.h  diceframe.h  enums.h
Src/: diceapplication.cpp  diceframe.cpp  main.cpp
